# sdp

./: Cargo.toml
docs/: ARCHITECTURE.md  PROTOCOL.md  SPEC.txt  SPEC_v2.txt
src/: main.rs  protocol.rs
src/crypto/: connection_crypto.rs  crypto.rs  identity.rs  mod.rs  secrets.rs  secrets_v2.rs  session_crypto.rs  stream_crypto.rs
src/protocol/: constants.rs
src/wire/: accept.rs  connect.rs  connection_decoder.rs  connection_decoder_v2.rs  connection_encoder.rs  connection_frame.rs  mod.rs  range_window.rs  reject.rs  start_stream.rs  stream_buffer.rs  stream_data.rs  stream_decoder.rs  stream_decoder_v2.rs  stream_encoder.rs  stream_frame.rs  varint.rs
